# polygon_collider

./: CMakeLists.txt  readme.md
glsl/: fragment_shader.glsl  vertex_shader.glsl
include/polygon_collider/: app.h  batch.h  camera.h  collision.h  color.h  edge.h  geometry.h  line.h  polygon.h  polygon_object.h  renderer.h  shader.h  stopwatch.h  timer.h  vector.h  vector_object.h  vector_object_queue.h  vertex_buffer.h  window.h
include/polygon_collider/core/: polygon_object.h  vector_object.h  vector_object_queue.h
include/polygon_collider/geometry/: edge.h  line.h  polygon.h  vector.h
include/polygon_collider/graphics/: batch.h  camera.h  renderer.h
include/polygon_collider/system/: math.h  stopwatch.h
lib/glad/include/glad/: gl.h
src/: app.c  batch.c  camera.c  collision.c  color.c  edge.c  geometry.c  line.c  main.c  polygon.c  polygon_object.c  renderer.c  shader.c  stopwatch.c  timer.c  vector.c  vector_object.c  vector_object_queue.c  vertex_buffer.c  window.c
src/core/: app.c  polygon_object.c  vector_object.c  vector_object_queue.c
src/geometry/: edge.c  line.c  polygon.c  vector.c
src/graphics/: batch.c  camera.c  color.c  renderer.c  shader.c
src/system/: main.c  math.c  stopwatch.c  window.c
